// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders patient care plan view 1`] = `
<div>
  <div
    className=""
  >
    <a
      className="undefined"
      href="/patients/patient-1/map/active"
      onClick={[Function]}
    >
      Active
    </a>
    <a
      className=""
      href="/patients/patient-1/map/inactive"
      onClick={[Function]}
    >
      Inactive
    </a>
    <a
      className=""
      href="/patients/patient-1/map/suggestions"
      onClick={[Function]}
    >
      Suggestions
    </a>
  </div>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          Loading...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders patient profile container correctly 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <div>
      <div
        className={undefined}
      />
      <div
        className=""
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
            style={
              Object {
                "backgroundImage": "url('http://bit.ly/2vaOMQJ')",
              }
            }
          />
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              High Risk Patient
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Unknown
              </div>
              <div />
            </div>
            <div
              className={undefined}
            >
              40
               • 
            </div>
          </div>
        </div>
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            <div>
              Date of birth
              :
            </div>
            <div
              className={undefined}
            >
              2/16/1977
            </div>
          </div>
          <div
            className={undefined}
          >
            <div>
              Preferred language
              :
            </div>
            <div
              className={undefined}
            >
              Declined
            </div>
          </div>
          <div
            className={undefined}
          >
            <div>
              Location
              :
            </div>
            <div
              className={undefined}
            >
              Brooklyn, NY
            </div>
          </div>
          <div
            className={undefined}
          >
            <div>
              Patient since
              :
            </div>
            <div
              className={undefined}
            >
              Unknown
            </div>
          </div>
          <div
            className={undefined}
          >
            <div>
              Medicare ID
              :
            </div>
            <div
              className={undefined}
            >
              123456789
            </div>
          </div>
        </div>
        <div
          className={undefined}
        >
          <div
            className=""
          />
          <div
            className=""
          />
          <div
            className=""
          />
          <div
            className=""
          />
        </div>
        <div
          className={undefined}
        >
          <textarea
            className={undefined}
            disabled={true}
            onChange={[Function]}
            placeholder="Loading..."
            value={undefined}
          />
          <div
            className={undefined}
          />
        </div>
      </div>
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          Active medications
        </div>
        <div
          className={undefined}
        />
      </div>
      <div
        className="undefined"
      >
        <div
          className={undefined}
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <div
            className=""
            onClick={[Function]}
          >
            <div
              className={undefined}
            >
              <div
                className=""
              />
              <div
                className={undefined}
              >
                Care Team
              </div>
            </div>
            <div
              className=""
            />
          </div>
          <div
            className=""
          >
            <div>
              <div
                className={undefined}
              >
                <div
                  className={undefined}
                >
                  <div
                    className={undefined}
                  />
                  <div
                    className={undefined}
                  >
                    <div
                      className={undefined}
                    >
                      Chat with team
                    </div>
                    <div
                      className={undefined}
                    >
                      Patient slack channel
                    </div>
                  </div>
                </div>
              </div>
              <div
                className={undefined}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className={undefined}
    >
      <a
        className=""
        href="/patients/patient-1/360"
        onClick={[Function]}
      >
        360° View
      </a>
      <a
        className="undefined"
        href="/patients/patient-1/map"
        onClick={[Function]}
      >
        MAP
      </a>
      <a
        className=""
        href="/patients/patient-1/timeline"
        onClick={[Function]}
      >
        Timeline
      </a>
      <a
        className=""
        href="/patients/patient-1/patientInfo"
        onClick={[Function]}
      >
        Patient Info
      </a>
    </div>
    <div>
      <div
        className=""
      >
        <a
          className="undefined"
          href="/patients/patient-1/map/active"
          onClick={[Function]}
        >
          Active
        </a>
        <a
          className=""
          href="/patients/patient-1/map/inactive"
          onClick={[Function]}
        >
          Inactive
        </a>
        <a
          className=""
          href="/patients/patient-1/map/suggestions"
          onClick={[Function]}
        >
          Suggestions
        </a>
      </div>
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Loading...
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders patient profile for ipad 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <div
          className={undefined}
        />
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url('http://bit.ly/2vaOMQJ')",
            }
          }
        />
        <div
          className={undefined}
        >
          Loading Patient
        </div>
        <div
          className=""
          onClick={[Function]}
        />
        <div
          className=""
          onClick={[Function]}
        />
      </div>
      <div
        className={undefined}
      >
        <div
          className=""
          onClick={[Function]}
        />
      </div>
    </div>
    <div
      className="undefined"
    >
      <div>
        <div
          className={undefined}
        />
        <div
          className="undefined"
        >
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                High Risk Patient
              </div>
              <div
                className={undefined}
              >
                Unknown null
              </div>
              <div
                className={undefined}
              >
                40
                 • 
              </div>
            </div>
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              <div>
                Date of birth
                :
              </div>
              <div
                className={undefined}
              >
                2/16/1977
              </div>
            </div>
            <div
              className={undefined}
            >
              <div>
                Preferred language
                :
              </div>
              <div
                className={undefined}
              >
                Declined
              </div>
            </div>
            <div
              className={undefined}
            >
              <div>
                Location
                :
              </div>
              <div
                className={undefined}
              >
                Brooklyn, NY
              </div>
            </div>
            <div
              className={undefined}
            >
              <div>
                Patient since
                :
              </div>
              <div
                className={undefined}
              >
                Unknown
              </div>
            </div>
            <div
              className={undefined}
            >
              <div>
                Medicare ID
                :
              </div>
              <div
                className={undefined}
              >
                123456789
              </div>
            </div>
          </div>
          <div
            className={undefined}
          >
            <div
              className=""
            />
            <div
              className=""
            />
            <div
              className=""
            />
            <div
              className=""
            />
          </div>
          <div
            className={undefined}
          >
            <textarea
              className={undefined}
              disabled={true}
              onChange={[Function]}
              placeholder="Loading..."
              value={undefined}
            />
            <div
              className={undefined}
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="undefined"
    >
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            Active medications
          </div>
          <div
            className={undefined}
          />
        </div>
        <div
          className="undefined"
        >
          <div
            className={undefined}
          >
            Loading...
          </div>
        </div>
      </div>
    </div>
    <div
      className="undefined"
    >
      <div
        className="undefined"
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            <div
              className="undefined"
              onClick={[Function]}
            >
              <div
                className={undefined}
              >
                <div
                  className="undefined"
                />
                <div
                  className={undefined}
                >
                  Care Team
                </div>
              </div>
              <div
                className="undefined"
              />
            </div>
            <div
              className="undefined"
            >
              <div>
                <div
                  className={undefined}
                >
                  <div
                    className={undefined}
                  >
                    <div
                      className={undefined}
                    />
                    <div
                      className={undefined}
                    >
                      <div
                        className={undefined}
                      >
                        Chat with team
                      </div>
                      <div
                        className={undefined}
                      >
                        Patient slack channel
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className={undefined}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className=""
      onClick={[Function]}
    />
  </div>
  <div
    className="undefined"
  >
    <div
      className={undefined}
    >
      <a
        className=""
        href="/patients/patient-1/360"
        onClick={[Function]}
      >
        360° View
      </a>
      <a
        className="undefined"
        href="/patients/patient-1/map"
        onClick={[Function]}
      >
        MAP
      </a>
      <a
        className=""
        href="/patients/patient-1/timeline"
        onClick={[Function]}
      >
        Timeline
      </a>
      <a
        className=""
        href="/patients/patient-1/patientInfo"
        onClick={[Function]}
      >
        Patient Info
      </a>
    </div>
    <div>
      <div
        className=""
      >
        <a
          className="undefined"
          href="/patients/patient-1/map/active"
          onClick={[Function]}
        >
          Active
        </a>
        <a
          className=""
          href="/patients/patient-1/map/inactive"
          onClick={[Function]}
        >
          Inactive
        </a>
        <a
          className=""
          href="/patients/patient-1/map/suggestions"
          onClick={[Function]}
        >
          Suggestions
        </a>
      </div>
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Loading...
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
